--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
       <div class="content">
           <h3>Niassa</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ducimus, reprehenderit, maxime aliquam illo nemo non molestiae molestias suscipit impedit ipsam eaque nostrum porro rem quisquam aperiam tenetur sed eos?</p>
-           <a href="book.php" class="btn">Book now</a>
+           <a href="book.php" class="btn">Viaje agora</a>
       </div>
   </div>
 
@@ -170,7 +170,7 @@
     <div class="content">
         <h3>Pestana Bazaruto Inhambane</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ducimus, reprehenderit, maxime aliquam illo nemo non molestiae molestias suscipit impedit ipsam eaque nostrum porro rem quisquam aperiam tenetur sed eos?</p>
-         <a href="book.php" class="btn">Book now</a>
+         <a href="book.php" class="btn">Viaje agora</a>
     </div>
 </div>
 
@@ -182,7 +182,7 @@
     <div class="content">
         <h3>Mercado em Maputo</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ducimus, reprehenderit, maxime aliquam illo nemo non molestiae molestias suscipit impedit ipsam eaque nostrum porro rem quisquam aperiam tenetur sed eos?</p>
-         <a href="book.php" class="btn">Book now</a>
+         <a href="book.php" class="btn">Viaje agora</a>
     </div>
 </div>
 </div>
