--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
 
     <div class="about-content content">
         <h3>Sobre nos</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum suscipit nostrum necessitatibus voluptatum numquam. Nostrum veniam beatae ipsam corporis vitae, dignissimos, tenetur odit nesciunt amet asperiores a quam doloribus repellat!</p>
+        <p>Edson sit amet consectetur adipisicing elit. Harum suscipit nostrum necessitatibus voluptatum numquam. Nostrum veniam beatae ipsam corporis vitae, dignissimos, tenetur odit nesciunt amet asperiores a quam doloribus repellat!</p>
 
         <a href="about.php" class="btn">Leia Mais</a>
     </div> <br>
